WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79101
[Qt][WK2] Fix the N9 build
https://bugs.webkit.org/show_bug.cgi?id=79101
Summary
[Qt][WK2] Fix the N9 build
Andras Becsi
Reported
2012-02-21 06:53:01 PST
Since
http://trac.webkit.org/changeset/107951
building TextureMapperGL.cpp with OpenGL-ES fails, because of missing GL_BGRA GL_RGBA and GL_BGR defines.
Attachments
proposed fix
(1.61 KB, patch)
2012-02-21 06:56 PST
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
patch for landing
(1.40 KB, patch)
2012-02-21 08:23 PST
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-02-21 06:56:49 PST
Created
attachment 127962
[details]
proposed fix
Andras Becsi
Comment 2
2012-02-21 07:39:21 PST
Comment on
attachment 127962
[details]
proposed fix Remove from review queue after discussion on IRC.
Andras Becsi
Comment 3
2012-02-21 08:23:54 PST
Created
attachment 127975
[details]
patch for landing The missing define should be added in
http://codereview.qt-project.org/#change,17099
so landing the patch to fix the missing include only.
Andras Becsi
Comment 4
2012-02-21 08:27:12 PST
Committed
r108359
: <
http://trac.webkit.org/changeset/108359
>
Yael
Comment 5
2012-02-21 18:24:25 PST
This was reverted because it broke the linux desktop build.
Simon Hausmann
Comment 6
2012-02-22 00:31:53 PST
(In reply to
comment #5
)
> This was reverted because it broke the linux desktop build.
When rolling out changes please 1) mention the change set that _did_ roll it out. 2) explain the build issue that came along with it.
Andras Becsi
Comment 7
2012-02-22 03:16:00 PST
(In reply to
comment #5
)
> This was reverted because it broke the linux desktop build.
It did not break the desktop build for me, do you use some special build options?
Andras Becsi
Comment 8
2012-02-22 04:57:28 PST
Committed
r108483
: <
http://trac.webkit.org/changeset/108483
>
Yael
Comment 9
2012-02-22 05:13:21 PST
(In reply to
comment #7
)
> (In reply to
comment #5
) > > This was reverted because it broke the linux desktop build. > It did not break the desktop build for me, do you use some special build options?
Have a look at
http://build.webkit.org/builders/Qt%20Linux%2064-bit%20Release%20%28Perf%29/builds/148
and
http://build.webkit.org/builders/Qt%20Linux%2064-bit%20Release%20%28Perf%29/builds/149
.
Andras Becsi
Comment 10
2012-02-22 05:43:29 PST
(In reply to
comment #9
)
> (In reply to
comment #7
) > > (In reply to
comment #5
) > > > This was reverted because it broke the linux desktop build. > > It did not break the desktop build for me, do you use some special build options? > > Have a look at
http://build.webkit.org/builders/Qt%20Linux%2064-bit%20Release%20%28Perf%29/builds/148
and
http://build.webkit.org/builders/Qt%20Linux%2064-bit%20Release%20%28Perf%29/builds/149
.
I get a proxy error for these links. Guessing from the link this is the performance bot where the incremental build broke because of the WebKit2 widgets removal patch and it needed a clean build locally since the master does not support triggering clean builds on the web interface. I notified Ossy about that and he triggered a clean build a bit later. The release WebKit2 bot can be found here
http://build.webkit.sed.hu/waterfall?show=x86-32%20Linux%20Qt%20Release%20WebKit2
, I triggered a clean build on that one myself. But the old patch indeed broke the CONFIG+=force_static_libs_as_shared build, which was fixed with the new patch, so thanks for catching this issue :)
Yael
Comment 11
2012-02-22 06:20:16 PST
You can see the build error in
http://pastebin.com/SzwLqaEg
. It was probably just that we needed a clean build. Sorry about this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug