[Qt][WK2] Fix the N9 build https://bugs.webkit.org/show_bug.cgi?id=79101

Reviewed by Noam Rosenthal.

No new tests needed.

* platform/graphics/opengl/TextureMapperGL.cpp: Add missing include.

Canonical link: https://commits.webkit.org/96166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108359 268f45cc-cd09-0410-ab3c-d52691b4dbfc